--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mysql2": "^2.3.3",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
