--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.35.4",
     "axios": "^0.27.2",
     "mysql2": "^2.3.3",
     "next": "12.2.3",
